[package]
name = "movement"
version = "0.1.6"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "movement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.6"
anchor-lang = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
position = { version = "0.1.6", path = "../../components/position", features = ["cpi"] }
