[package]
name = "tick"
version = "0.1.6"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tick"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.9"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
game = { path = "../../components/game", features = ["cpi"] }
